refactor: Agregar estilos y formatear código en `user.html`

--- a/views/components/templates/user.html
+++ b/views/components/templates/user.html
@@ -12,6 +12,10 @@
   .user-container .panel-left {
     width: 42%;
   }
+  .user-container .panel-left .content-aside {
+    position: sticky;
+    top: calc(50px + 1rem);
+  }
   .user-container .content-user {
     width: 58%;
   }
@@ -19,45 +23,51 @@
 <div class="user-container">
   <div>{{perfil_user}}</div>
   <div class="panel-container">
-    <div class="panel-left">{{aside}}</div>
+    <div class="panel-left">
+      <div class="content-aside">{{aside}}</div>
+    </div>
     <div class="content-user">{{content}}</div>
+
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        const allPostContainer = document.querySelectorAll(".post-container");
+
+        allPostContainer.forEach((postContainer) => {
+          const likeButton = postContainer.querySelector(".like-button");
+          const likeCount = postContainer.querySelector(
+            ".post-reactions .count-likes"
+          );
+
+          if (likeButton) {
+            likeButton.addEventListener("click", function () {
+              const postId = this.dataset.postId;
+              const userId = this.dataset.userId;
+              fetch("/handle-form/like", {
+                method: "POST",
+                headers: {
+                  "Content-Type": "application/json",
+                },
+                body: JSON.stringify({ post_id: postId, user_id: userId }),
+              })
+                .then((response) => response.json())
+                .then((data) => {
+                  if (data) {
+                    likeButton
+                      .querySelector("i")
+                      .classList.replace("far", "fas");
+                    likeCount.textContent = parseInt(likeCount.textContent) + 1;
+                  } else {
+                    likeButton
+                      .querySelector("i")
+                      .classList.replace("fas", "far");
+                    likeCount.textContent = parseInt(likeCount.textContent) - 1;
+                  }
+                })
+                .catch((error) => console.error("Error:", error));
+            });
+          }
+        });
+      });
+    </script>
   </div>
 </div>
-
-<script>
-  document.addEventListener("DOMContentLoaded", function () {
-    const allPostContainer = document.querySelectorAll(".post-container");
-
-    allPostContainer.forEach((postContainer) => {
-      const likeButton = postContainer.querySelector(".like-button");
-      const likeCount = postContainer.querySelector(
-        ".post-reactions .count-likes"
-      );
-
-      if (likeButton) {
-        likeButton.addEventListener("click", function () {
-          const postId = this.dataset.postId;
-          const userId = this.dataset.userId;
-          fetch("/handle-form/like", {
-            method: "POST",
-            headers: {
-              "Content-Type": "application/json",
-            },
-            body: JSON.stringify({ post_id: postId, user_id: userId }),
-          })
-            .then((response) => response.json())
-            .then((data) => {
-              if (data) {
-                likeButton.querySelector("i").classList.replace("far", "fas");
-                likeCount.textContent = parseInt(likeCount.textContent) + 1;
-              } else {
-                likeButton.querySelector("i").classList.replace("fas", "far");
-                likeCount.textContent = parseInt(likeCount.textContent) - 1;
-              }
-            })
-            .catch((error) => console.error("Error:", error));
-        });
-      }
-    });
-  });
-</script>
