--- a/views/components/templates/index.html
+++ b/views/components/templates/index.html
@@ -36,13 +36,13 @@
       if (likeButton) {
         likeButton.addEventListener("click", function () {
           const postId = this.dataset.postId;
-          const userId = this.dataset.userId;
+          
           fetch("/handle-form/like", {
             method: "POST",
             headers: {
               "Content-Type": "application/json",
             },
-            body: JSON.stringify({ post_id: postId, user_id: userId }),
+            body: JSON.stringify({ post_id: postId }),
           })
             .then((response) => response.json())
             .then((data) => {
