style: Modificar contenido a mostrar en platilla `details.html`

--- a/views/components/aside/details.html
+++ b/views/components/aside/details.html
@@ -55,8 +55,8 @@
         Vive en {{lugar_vive}}
       </div>
       <div class="info">
-        <i class="fas fa-map-marker-alt"></i>
-        De {{lugar_origen}}
+        <i class="fas fa-users"></i>
+        {{estado_civil}}
       </div>
       <button class="button">Editar detalles</button>
     </div>
