refactor: Agregar ruta de configuración de perfil

--- a/views/components/aside/details.html
+++ b/views/components/aside/details.html
@@ -58,7 +58,7 @@
         <i class="fas fa-users"></i>
         {{estado_civil}}
       </div>
-      <button class="button">Editar detalles</button>
+      <a href="/config/" class="button">Editar detalles</a>
     </div>
   </div>
 </div>
