perf: Agregar `<link>` para estilos css

--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -11,8 +11,10 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
       rel="stylesheet"
     />
-
-    {{estilos_css}}
+    <link
+      href="/assets/css/style.css"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
