--- a/views/components/publication/input-post.html
+++ b/views/components/publication/input-post.html
@@ -229,12 +229,23 @@
 
 <div class="post-container-create">
   <div class="post-header">
-    <img alt="Profile picture" class="profile-pic" src="{{imagen_perfil}}" />
-    <input class="post-input" placeholder="¿Qué estás pensando?" type="text" />
+    <img
+      alt="Profile picture"
+      class="profile-pic"
+      src="{{imagen_perfil}}"
+    />
+    <input
+      class="post-input"
+      placeholder="¿Qué estás pensando?"
+      type="text"
+    />
   </div>
   <div class="post-actions">
     <div class="post-action">
-      <i class="fas fa-video" style="color: #f02849"></i>
+      <i
+        class="fas fa-video"
+        style="color: #f02849"
+      ></i>
       <span>Agregar video o foto</span>
     </div>
   </div>
@@ -246,16 +257,27 @@
       <h2>Crear publicación</h2>
     </div>
     <div class="create-post-perfil">
-      <img class="profile-pic" src="{{imagen_perfil}}" alt="Profile picture" />
+      <img
+        class="profile-pic"
+        src="{{imagen_perfil}}"
+        alt="Profile picture"
+      />
       <span>{{autor_post}}</span>
     </div>
     <div class="create-post-input">
       <textarea placeholder="¿Qué estás pensando?"></textarea>
     </div>
 
-    <div class="pre-view-file" style="display: none"></div>
+    <div
+      class="pre-view-file"
+      style="display: none"
+    ></div>
     <div class="file-content">
-      <label class="select-image" for="input-imagen" style="display: none">
+      <label
+        class="select-image"
+        for="input-imagen"
+        style="display: none"
+      >
         <input
           id="input-imagen"
           type="file"
@@ -266,16 +288,31 @@
         <span>Arrastra tus imágenes</span>
       </label>
 
-      <label class="select-video" for="input-video" style="display: none">
-        <input id="input-video" type="file" accept="video/mp4" hidden />
+      <label
+        class="select-video"
+        for="input-video"
+        style="display: none"
+      >
+        <input
+          id="input-video"
+          type="file"
+          accept="video/mp4"
+          hidden
+        />
         <span>Arrastra tus videos</span>
       </label>
     </div>
 
     <div class="agregar-foto-video">
       <div class="upload-file">
-        <i id="icon-image" class="fas fa-image"></i>
-        <i id="icon-video" class="fas fa-video"></i>
+        <i
+          id="icon-image"
+          class="fas fa-image"
+        ></i>
+        <i
+          id="icon-video"
+          class="fas fa-video"
+        ></i>
       </div>
     </div>
     <div class="create-post-actions">
