feat: Función para obtener imagen de perfil y nombre del usuario actual

--- a/views/components/publication/input-post.html
+++ b/views/components/publication/input-post.html
@@ -440,4 +440,13 @@
       console.error(error);
     }
   });
+
+  function getDataUser() {
+    const perfil = document.querySelector(".create-post-perfil img").src;
+    const nombre = document.querySelector(
+      ".create-post-perfil span"
+    ).textContent;
+
+    return { perfil, nombre };
+  }
 </script>
