--- a/views/components/publication/input-post.html
+++ b/views/components/publication/input-post.html
@@ -80,7 +80,7 @@
     padding: 1rem;
     width: 100%;
     max-width: 500px;
-    /* height: 410px; */
+    height: 610px;
     position: absolute;
     top: 50%;
     left: 50%;
