--- a/views/components/publication/input-post.html
+++ b/views/components/publication/input-post.html
@@ -183,6 +183,8 @@
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
+    height: 15rem;
+    overflow: hidden;
   }
 
   .pre-view-file .visual {
