style: Selector para clase y videos

--- a/views/components/publication/input-post.html
+++ b/views/components/publication/input-post.html
@@ -187,7 +187,7 @@
     overflow: hidden;
   }
 
-  .pre-view-file .visual {
+  .pre-view-file :is(.visual, video) {
     height: auto;
     object-fit: cover;
   }
