style: Cambiar altura si hay elementos previsualidandose

--- a/views/components/publication/input-post.html
+++ b/views/components/publication/input-post.html
@@ -215,6 +215,10 @@
     width: calc(50% - 5px);
   }
 
+  .pre-view-file:has(.visual) ~ .file-content label {
+    height: 3rem;
+  }
+
   .file-content {
     border: 2px solid #ddd;
     border-radius: 2px;
