--- a/views/components/user-elements/login.html
+++ b/views/components/user-elements/login.html
@@ -1,103 +1,130 @@
 <style>
   body {
+    background-color: rgba(0, 0, 0, 0.1);
+  }
+  .login-title {
+    margin-top: 50px;
+    display: flex;
+    font-size: 4rem;
+    font-family: Arial, sans-serif;
+    font-weight: bold;
+    justify-content: center;
+    align-items: center;
+    color: #0866ff;
+    padding: 20px 0;
+  }
+  .login-container {
+    display: flex;
+    width: 100%;
+    max-width: 400px;
+    margin: 0 auto;
     background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    justify-content: center;
+    flex-direction: column;
+    padding: 20px 30px 30px 30px;
+    margin-bottom: 10px;
+    gap: 1rem;
+  }
+  .auth-container__title {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    font-size: 2rem;
+    padding: 10px;
     margin: 0;
   }
-
+  .linea {
+    width: 100%;
+    border-top: 2px solid rgba(0, 0, 0, 0.1);
+  }
   .auth-form__input--text,
   .auth-form__input--password {
     width: 100%;
-    padding: 12px;
-    margin: 10px 0;
+    padding: 15px;
     border: 1px solid #dcdfe6;
     border-radius: 5px;
     box-sizing: border-box;
+    font-size: 1rem;
   }
 
   .auth-form__submit-button {
     width: 100%;
-    padding: 10px;
-    margin-bottom: 15px;
+    padding: 15px;
     border: none;
-    border-radius: 3px;
+    border-radius: 8px;
     box-sizing: border-box;
-    background-color: #0d92f4;
+    background-color: #0866ff;
     color: white;
     cursor: pointer;
+    font-size: 1.2rem;
+    font-family: serif;
   }
-
-  .auth-container {
-    background-color: #fff;
-    border-radius: 10px;
-    padding: 30px;
-    border: 1px solid #dcdfe6;
-    max-width: 400px;
-    width: 100%;
-    text-align: center;
-    box-sizing: border-box;
+  .btn-crear {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1rem;
   }
-
-  .auth-container__foto {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    margin: 20px auto;
-    background-size: cover;
-  }
-
-  .auth-form__button {
-    color: #fff;
-    background-color: #0d92f4;
-    border-radius: 5px;
+  .btn-crear a {
+    font-family: serif;
+    width: 60%;
+    padding: 15px;
     border: none;
-    padding: 10px 20px;
+    border-radius: 8px;
+    box-sizing: border-box;
+    background-color: #00a400;
+    color: white;
     cursor: pointer;
-  }
-
-  .auth-container__title {
-    margin: 0;
-    font-size: 24px;
+    text-decoration: none;
+    text-align: center;
+    font-size: 1.2rem;
   }
   .auth-container__error {
+    text-align: center;
     color: red;
     font-size: 12px;
     text-transform: capitalize;
   }
 </style>
 
-<div class="auth-container">
-  <h1 class="auth-container__title">Inicio de Sesión</h1>
-  <form
-    action="/login-process"
-    method="POST"
-    class="auth-form"
-  >
-    <input
-      type="email"
-      name="email"
-      placeholder="email"
-      class="auth-form__input--text"
-      required
-    />
-    <br />
-    <input
-      type="password"
-      name="password"
-      placeholder="Contraseña"
-      class="auth-form__input--password"
-      required
-    />
-    <br />
-    <button
-      type="submit"
-      class="auth-form__submit-button"
-    >
-      Iniciar sesión
-    </button>
+<div>
+  <div>
+    <div class="login-title">Social Media</div>
+  </div>
+  <form action="/login-process" method="POST" class="auth-form">
+    <div class="login-container">
+      <h1 class="auth-container__title">Iniciar Sesión</h1>
+      <div class="linea"></div>
+      <div>
+        <input
+          type="email"
+          name="email"
+          placeholder="Email"
+          class="auth-form__input--text"
+          required
+        />
+      </div>
+      <div>
+        <input
+          type="password"
+          name="password"
+          placeholder="Contraseña"
+          class="auth-form__input--password"
+          required
+        />
+      </div>
+      <div>
+        <button type="submit" class="auth-form__submit-button">
+          Iniciar sesión
+        </button>
+      </div>
+      <div class="linea"></div>
+      <div class="btn-crear">
+        <a href="#">Crear cuenta nueva</a>
+      </div>
+      <div class="auth-container__error">{{mensaje_error}}</div>
+    </div>
   </form>
-  <div class="auth-container__error">{{mensaje_error}}</div>
 </div>
