style/Usar variables CSS para color

--- a/views/components/amigos/no-friend-card.html
+++ b/views/components/amigos/no-friend-card.html
@@ -5,7 +5,7 @@
     border-radius: 8px;
     overflow: hidden;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    background-color: white;
+    background-color: var(--background-primary);
     height: fit-content;
   }
 
@@ -37,7 +37,7 @@
     font-weight: bold;
   }
   .card-no-amigo .info-amigo .amigos-relacionados {
-    color: #606770;
+    color: var(--text-color-secondary);
   }
   .card-no-amigo .container-buttons {
     display: flex;
@@ -52,13 +52,13 @@
     cursor: pointer;
   }
   .card-no-amigo .container-buttons button:nth-child(1) {
-    background-color: #eaf4fe;
-    color: blue;
+    background-color: var(--background-input);
+    color: var(--primary-color);
     font-weight: bold;
   }
   .card-no-amigo .container-buttons button:nth-child(2) {
-    background-color: #e4e6eb;
-    color: black;
+    background-color: var(--background-secondary);
+    color: var(--text-color);
     font-weight: bold;
   }
 </style>
