style/Usar variables CSS para border-radius y box-shadow

--- a/views/components/amigos/no-friend-card.html
+++ b/views/components/amigos/no-friend-card.html
@@ -2,9 +2,9 @@
   .card-no-amigo {
     width: 100%;
     max-width: 201px;
-    border-radius: 8px;
+    border-radius: var(--border-radius-primary);
     overflow: hidden;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: var(--box-shadow);
     background-color: var(--background-primary);
     height: fit-content;
   }
@@ -48,7 +48,7 @@
     width: 100%;
     border: none;
     padding: 8px;
-    border-radius: 8px;
+    border-radius: var(--border-radius-primary);
     cursor: pointer;
   }
   .card-no-amigo .container-buttons button:nth-child(1) {
