--- a/views/components/aside/details.html
+++ b/views/components/aside/details.html
@@ -5,7 +5,7 @@
   }
   .information-user .content-detalles {
     border-radius: 8px;
-    background-color: white;
+    background-color: var(--background-primary);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     padding: 1rem;
   }
@@ -21,7 +21,7 @@
     background-color: var(--button-secondary);
     border: none;
     border-radius: 6px;
-    color: #050505;
+    color: var(--text-color);
     display: flex;
     align-items: center;
     justify-content: center;
