style/Cambiar a variables CSS para box-shadow

--- a/views/components/aside/details.html
+++ b/views/components/aside/details.html
@@ -6,7 +6,7 @@
   .information-user .content-detalles {
     border-radius: 8px;
     background-color: var(--background-primary);
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: var(--box-shadow);
     padding: 1rem;
   }
   .information-user h2 {
