--- a/views/components/aside/fotos.html
+++ b/views/components/aside/fotos.html
@@ -2,7 +2,7 @@
   .container-fotos {
     border-radius: 8px;
     background-color: white;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: var(--box-shadow);
     padding: 1rem;
   }
   .container-fotos .header-fotos {
