style/Cambiar a variables CSS para color en burbuja-comentario.html

--- a/views/components/publication/burbuja-comentario.html
+++ b/views/components/publication/burbuja-comentario.html
@@ -23,7 +23,7 @@
     display: none;
   }
   .comment-content-video {
-    background-color: #e0e3ea;
+    background-color: var(--background-input);
     border-radius: 20px;
     padding: 10px 15px;
   }
@@ -33,7 +33,7 @@
   }
   .comment-content-video a {
     text-decoration: none;
-    color: black;
+    color: var(--text-color);
   }
   .comment-content-video a:hover {
     text-decoration: underline;
