style/Cambiar a variables CSS para color en contenedor-comentario.html

--- a/views/components/publication/contenedor-comentario.html
+++ b/views/components/publication/contenedor-comentario.html
@@ -9,7 +9,7 @@
     border: 0;
     border-radius: 20px;
     font-size: 14px;
-    background-color: #e0e3ea;
+    background-color: var(--background-input);
     resize: none;
     outline: none;
   }
@@ -30,7 +30,7 @@
   .content-send-comentario button {
     background: none;
     border: none;
-    color: #606770;
+    color: var(--text-color-secondary);
     font-size: 20px;
     cursor: pointer;
     display: flex;
