--- a/views/components/publication/input-post.html
+++ b/views/components/publication/input-post.html
@@ -5,7 +5,7 @@
     background-color: var(--background-primary);
     border-radius: 8px;
     padding: 10px;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+    box-shadow: var(--box-shadow);
     max-width: 680px;
     margin: 0 auto;
     margin-bottom: 10px;
@@ -86,7 +86,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     border-radius: 12px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: var(--box-shadow);
   }
 
   .create-post-perfil {
