style: Definir `object-fit: cover` para hijos .visual y etiqueta video

--- a/views/components/publication/post.html
+++ b/views/components/publication/post.html
@@ -39,10 +39,8 @@
     flex-wrap: wrap;
     gap: 10px;
   }
-  .post-images .visual {
+  .post-images :is(.visual, video) {
     height: auto;
-  }
-  .post-images video {
     object-fit: cover;
   }
   .post-images .visual:nth-child(1):nth-last-child(1) {
