--- a/views/components/publication/post.html
+++ b/views/components/publication/post.html
@@ -4,10 +4,10 @@
     max-width: 680px;
     margin: 0 auto;
     margin-bottom: 20px;
-    background-color: #fff;
+    background-color: var(--background-primary);
     border: 1px solid #dddfe2;
     border-radius: 8px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    box-shadow: var(--box-shadow);
   }
   .post-header {
     display: flex;
@@ -24,7 +24,7 @@
     font-weight: bold;
   }
   .post-header .post-date {
-    color: #606770;
+    color: var(--text-color-secondary);
     font-size: 12px;
   }
   .post-content {
@@ -66,7 +66,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    color: #606770;
+    color: var(--text-color-secondary);
     font-size: 14px;
   }
   .post-reactions img {
@@ -84,7 +84,7 @@
   .post-actions button {
     background: none;
     border: none;
-    color: #606770;
+    color: var(--text-color-secondary);
     font-size: 14px;
     display: flex;
     align-items: center;
@@ -144,7 +144,7 @@
   .post-comment .comment-send-post button {
     background: none;
     border: none;
-    color: #606770;
+    color: var(--text-color-secondary);
     font-size: 14px;
     cursor: pointer;
     display: flex;
