style/Cambiar a variables CSS para color en video-player.html

--- a/views/components/publication/video-player.html
+++ b/views/components/publication/video-player.html
@@ -1,7 +1,7 @@
 <style>
   .video-container {
     width: 100%;
-    background-color: #fff;
+    background-color: var(--background-primary);
     border: 1px solid #dddfe3;
     box-shadow: 0 0px 0px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
@@ -13,7 +13,7 @@
     width: 100%;
     aspect-ratio: 16 / 9;
     border-radius: 8px;
-    background-color: black;
+    background-color: var(--text-color);
   }
 
   .content-video {
@@ -23,7 +23,7 @@
   .content-video p {
     margin: 0;
     font-size: 24px;
-    color: black;
+    color: var(--text-color);
     font-weight: bold;
   }
 
@@ -34,7 +34,7 @@
     align-items: center;
     margin-right: auto;
     justify-content: space-between;
-    color: #606770;
+    color: var(--text-color-secondary);
     font-size: 14px;
     white-space: nowrap;
   }
@@ -56,7 +56,7 @@
   .actions-video button {
     background: none;
     border: none;
-    color: #606770;
+    color: var(--text-color-secondary);
     font-size: 14px;
     display: flex;
     margin-right: 25px;
