style/Cambiar a variables CSS para color en 404.html

--- a/views/components/templates/404.html
+++ b/views/components/templates/404.html
@@ -14,16 +14,16 @@
     }
     .pri-error {
         font-size: 200px;
-        color: #000;
+        color: var(--text-color);
         margin: 0;
     }
     .se-error {
         font-size: 50px;
-        color: #000;
+        color: var(--text-color);
         margin: 10px 0;
     }
     .container-error a {
-        color: rgb(11, 87, 201);
+        color: var(--primary-color);
         border: none;
         display: flex;
         justify-content: center;
