--- a/views/components/templates/amigos.html
+++ b/views/components/templates/amigos.html
@@ -22,7 +22,7 @@
     display: flex;
     align-items: center;
     text-decoration: none;
-    color: #000000;
+    color: var(--text-color);
     padding: 8px;
     border-radius: 8px;
     font-size: 17px;
@@ -31,7 +31,7 @@
   .sidebar-menu .item-menu .icon {
     margin-right: 10px;
     font-size: 20px;
-    color: #000000;
+    color: var(--text-color);
     background-color: rgb(226, 226, 226);
     border-radius: 50%;
     aspect-ratio: 1/1;
@@ -42,18 +42,18 @@
     width: 36px;
   }
   .sidebar-menu .item-menu span {
-    color: #000000;
+    color: var(--text-color);
     font-size: 17px;
   }
   .sidebar-menu .item-menu:hover {
-    background-color: rgb(248, 248, 248);
+    background-color: var(--background-input-hover);
   }
   .sidebar .item-menu.active {
-    background-color: rgb(248, 248, 248);
+    background-color: var(--background-input-hover);
   }
   .sidebar .item-menu.active .icon {
-    background-color: blue;
-    color: white;
+    background-color: var(--primary-color);
+    color: var(--background-primary);
   }
   .main-content {
     width: 100%;
