--- a/views/components/publication/contenedor-comentario.html
+++ b/views/components/publication/contenedor-comentario.html
@@ -80,9 +80,9 @@
       ".content-send-comentario"
     );
     const imagenUsuario = sendComentario.querySelector("img").src;
-    const comentario = sendComentario.querySelector("textarea").value;
+    const comentario = sendComentario.querySelector("input").value;
     const autor = sendComentario
-      .querySelector("textarea")
+      .querySelector("input")
       .placeholder.replace("Comentar como ", "");
 
     return {
