--- a/views/components/publication/contenedor-comentario.html
+++ b/views/components/publication/contenedor-comentario.html
@@ -118,7 +118,7 @@
         })
           .then((response) => response.json())
           .then((data) => {
-            if (data === true) {
+            if (data.procesado === true) {
               const data = obtenerDatos(comentario);
               const comentarioHtml = crearComentario(
                 data.imagenAutor,
