--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -7,10 +7,10 @@
       content="width=device-width, initial-scale=1.0"
     />
     <title>{{titulo_pagina}}</title>
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-      rel="stylesheet"
-    />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
+      integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link
       href="/assets/css/style.css"
       rel="stylesheet"
