style: Migrar iconos a fa-solid

--- a/views/components/aside/details.html
+++ b/views/components/aside/details.html
@@ -47,15 +47,15 @@
     <h2>Detalles</h2>
     <div class="details">
       <div class="info">
-        <i class="fas pencil"></i>
+        <i class="fa-solid fa-pencil"></i>
         {{descripcion}}
       </div>
       <div class="info">
-        <i class="fas fa-home"></i>
+        <i class="fa-solid fa-house"></i>
         Vive en {{lugar_vive}}
       </div>
       <div class="info">
-        <i class="fas fa-users"></i>
+        <i class="fa-solid fa-user"></i>
         {{estado_civil}}
       </div>
       <a href="/config/" class="button">Editar detalles</a>
