--- a/views/components/aside/fast-menu.html
+++ b/views/components/aside/fast-menu.html
@@ -61,7 +61,7 @@
       class="fast-menu-item"
     >
       <div class="icon">
-        <i class="fas fa-user-friends"></i>
+        <i class="fa-solid fa-users"></i>
       </div>
       <span>Amigos</span>
     </a>
@@ -70,7 +70,7 @@
       class="fast-menu-item"
     >
       <div class="icon">
-        <i class="fas fa-images"></i>
+        <i class="fa-solid fa-images"></i>
       </div>
       <span>Imágenes</span>
     </a>
@@ -79,7 +79,7 @@
       class="fast-menu-item"
     >
       <div class="icon">
-        <i class="fas fa-video"></i>
+        <i class="fa-solid fa-video"></i>
       </div>
       <span>Videos</span>
     </a>
