--- a/views/components/publication/input-post.html
+++ b/views/components/publication/input-post.html
@@ -245,7 +245,7 @@
   <div class="post-actions">
     <div class="post-action">
       <i
-        class="fas fa-video"
+        class="fa-solid fa-video"
         style="color: #f02849"
       ></i>
       <span>Agregar video o foto</span>
@@ -309,11 +309,11 @@
       <div class="upload-file">
         <i
           id="icon-image"
-          class="fas fa-image"
+          class="fa-solid fa-image"
         ></i>
         <i
           id="icon-video"
-          class="fas fa-video"
+          class="fa-solid fa-video"
         ></i>
       </div>
     </div>
@@ -488,7 +488,7 @@
         <div class="post-author">${autorPost}</div>
         <div class="post-date">
           ${fechaPost} ·
-          <i class="fas fa-globe-americas"></i>
+          <i class="fa-solid fa-earth-americas"></i>
         </div>
       </div>
     </div>
@@ -507,15 +507,15 @@
         class="like-button"
         data-post-id="${postId}"
       >
-        <i class="fas fa-thumbs-up"></i>
+        <i class="fa-regular fa-thumbs-up"></i>
         Me gusta
       </button>
       <button>
-        <i class="far fa-comment"> </i>
+        <i class="fa-regular fa-comment"></i>
         Comentar
       </button>
       <button>
-        <i class="fas fa-share"> </i>
+        <i class="fa-solid fa-share"></i>
         Compartir
       </button>
     </div>
