--- a/views/components/publication/post.html
+++ b/views/components/publication/post.html
@@ -163,7 +163,7 @@
       <div class="post-author">{{autor_post}}</div>
       <div class="post-date">
         {{fecha_post}} ·
-        <i class="fas fa-globe-americas"> </i>
+        <i class="fa-solid fa-earth-americas"></i>
       </div>
     </div>
   </div>
@@ -182,15 +182,15 @@
       class="like-button"
       data-post-id="{{post_id}}"
     >
-      <i class="{{is_liked}} fa-thumbs-up"></i>
+      <i class="{{is_liked}} fa-thumbs-up"></i> /*Conectar con fa-solid y fa-regular*/
       Me gusta
     </button>
     <button>
-      <i class="far fa-comment"> </i>
+      <i class="fa-regular fa-comment"></i>
       Comentar
     </button>
     <button>
-      <i class="fas fa-share"> </i>
+      <i class="fa-solid fa-share"></i>
       Compartir
     </button>
   </div>
