--- a/views/components/publication/contenedor-comentario.html
+++ b/views/components/publication/contenedor-comentario.html
@@ -53,7 +53,7 @@
     <input placeholder="Comentar como {{usuario_actual}}" />
     <div class="content-button-comentario">
       <button>
-        <i class="fas fa-paper-plane"></i>
+        <i class="fa-solid fa-paper-plane"></i>
       </button>
     </div>
   </div>
